<?xml version="1.0"?>
<package format="2">
  <name>nautilus_project11</name>
  <version>0.0.0</version>
  <description>E/V Nautilus components for Project11</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
